polynomial-api service